--- a/app/src/main/res/layout/news_item.xml
+++ b/app/src/main/res/layout/news_item.xml
@@ -30,6 +30,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:textSize="17sp"
+                    android:textStyle="bold"
+                    android:textColor="@color/black"
                     android:layout_marginStart="10dp"
                     android:layout_marginLeft="10dp"
                     android:layout_marginEnd="120dp"
